# observe

./: .gitignore  AI_MODEL_COMPARISON.md  CUSTOM_AI_GUIDE.md  MONITORING_SETUP.md  README.md  REALTIME_MONITORING_GUIDE.md  RENDER_IP_GUIDE.md  SQUARESPACE_DOMAIN_SETUP.md  api_endpoint.py  app.py  app_comparison.md  deploy-render.sh  deploy_monitoring.sh  model.py  monitoring_status.py  render-grafana-only.yaml  render.yaml  requirements.txt  spx.code-workspace  test_dashboard_fix.py  troubleshoot_dashboard.py
data/: logs.csv  metrics.csv
grafana-stack/: AI_INTEGRATION_GUIDE.md  DNS_SETUP_GUIDE.md  Dockerfile.grafana  Dockerfile.prometheus  EMBEDDED_AI_GUIDE.md  EMBEDDING_GUIDE.md  FULL_INTEGRATION_GUIDE.md  MANUAL_DASHBOARD_SETUP.md  README.md  ai-agent-with-context.js  ai-bookmarklet.js  ai-chat-interface.html  auto-inject-bookmarklet.js  deploy-to-domain.sh  docker-compose.yml  final-working-bookmarklet.txt  fix-logout-issue.md  full-integration-ai.js  grafana-api-client.py  grafana-custom-nav.html  nginx.conf  openai-bookmarklet.js  real-openai-bookmarklet.js  self-contained-bookmarklet.js  setup-ssl.sh  test-context-capture.js  working-bookmarklet.js  working-simple-bookmarklet.js
grafana-stack/ai-service/: Dockerfile  ai_observability.py  app.py  enhanced_ai_agent.py  openai_app.py  pyproject.toml  real_openai_app.py  requirements.txt  simple_app.py  simple_openai_app.py  working_app.py
scripts/: generate_data.py  system_monitor.py
utils/: advanced_ai_model.py  ai_assistant.py  auth.py  custom_ai_model.py  detection_model.py  metric_collectors.py  (+1 more)
(+25 files in other folders)
