[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.41.0", "build>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-service"
version = "1.0.0"
description = "AI-powered monitoring service for Grafana"
requires-python = ">=3.11"
dependencies = [
    "flask>=2.3.3",
    "flask-cors>=4.0.0",
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.15.0",
    "gunicorn>=21.2.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "prometheus-client>=0.17.1",
    "psutil>=5.9.5",
]

[tool.setuptools]
packages = ["."] 